<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary_color"
            android:text="@string/add_emails"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:paddingTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp"
        android:background="@drawable/frame_with_border">


        <EditText
            android:id="@+id/fragment_add_email_email_address_field"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/frame_with_border"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:hint="@string/past_emails_here"
            android:textColor="@color/black"/>



        <TextView
            android:id="@+id/fragment_add_email_add_email_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:background="@drawable/primary_button"
            android:text="@string/add"/>

    </LinearLayout>


</LinearLayout>