<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="24dp"
    android:padding="16dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/dialog_body_background">


    <TextView
        android:id="@+id/dialog_show_emails_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary_color"
        android:text="@string/edit_emails"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/frame_with_border">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/circle"/>





            <EditText
                android:id="@+id/dialog_edit_emails_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_with_border"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:maxLines="1"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="mahmoudtharwat202020@gamil.com"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_edit_emails_delete_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:background="@drawable/delete_button"
                android:text="@string/delete"/>



            <TextView
                android:id="@+id/dialog_edit_emails_edit_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_button"
                android:text="@string/edit"/>



        </LinearLayout>


    </LinearLayout>


</LinearLayout>

